# proto_processing_lib

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-proto_processing_lib  bazel-testlogs
.github/workflows/: build.yml
proto_processing_lib/: BUILD.bazel  factory_helper.h  interface_util.h
proto_processing_lib/proto_scrubber/: BUILD.bazel  checksummer.cc  checksummer.h  checksummer_test.cc  cloud_audit_log_field_checker.cc  cloud_audit_log_field_checker.h  cloud_audit_log_field_checker_test.cc  constants.cc  constants.h  field_checker_interface.h  field_mask_node.cc  field_mask_node.h  field_mask_node_test.cc  field_mask_path_checker.cc  field_mask_path_checker.h  field_mask_path_checker_test.cc  field_mask_tree.cc  field_mask_tree.h  field_mask_tree_test.cc  internal_field_checker.cc  internal_field_checker.h  proto_scrubber.cc  proto_scrubber.h  proto_scrubber_enums.h  proto_scrubber_test.cc  proto_scrubber_test_lib.h  unknown_field_checker.cc  unknown_field_checker.h  unknown_field_checker_test.cc  utility.cc  utility.h  utility_test.cc
proto_processing_lib/proto_scrubber/testdata/: checksum_message_with_unknown.txt  checksummer_test.proto  checksummer_test.yaml  checksummer_test_input.proto.txt  checksummer_test_input_2.proto.txt  cloud_audit_log_field_checker_test.proto  field_extractor_test.proto  field_extractor_test.yaml  field_extractor_test_message.proto.txt  field_mask_path_checker_test.proto  field_mask_test.proto  field_mask_test.yaml  field_mask_test_input.proto.txt  proto_scrubber_fuzz_input.proto
proto_processing_lib/proto_scrubber/testdata/fuzzer_corpus/: calculate_checksum_corpus.txt
proto_processing_lib/proto_scrubber/testdata/proto_scruber_fuzz_corpus/: any_empty_value.prototxt  crash_any_with_bad_tag_large.prototxt  crash_any_with_bad_tag_small.prototxt  crash_bad_message_length.prototxt  crash_invalid_legacy_map_field.prototxt  crash_with_invalid_legacy_map_field.prototxt  duplicate_key_value_fields_in_mapentry.prototxt  infinite_loop_malformed_map_entry.prototxt  large_example.prototxt  path_not_popped_bad_map_entry.prototxt  scan_enum_kpartial.prototxt  scan_enun_kinclude.prototxt
